--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,18 +4,14 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     dataBinding.enabled = true
-
     defaultConfig {
-        applicationId "com.example.lukas.myapplication"
+        applicationId "com.example.lukas.vokabularwebovy"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
-        debug {
-            debuggable true
-        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -26,8 +22,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:appcompat-v7:25.+'
     compile 'com.alexgilleran:icesoap:1.1.1'
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:25.0.+'
+    compile 'com.android.support:recyclerview-v7:25.0.+'
+    compile 'com.jakewharton:disklrucache:2.0.2'
 }
