--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'org.jsoup:jsoup:1.10.2'
 }
